--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="reserva-mesa.html">Reserva de Mesas</a>
                             <a class="dropdown-item" href="reserva-computador.html">Reserva de Computador</a>
-                            <a class="dropdown-item" href="#">Fazer Pedido Online</a>
+                            <a class="dropdown-item" href="pedido-online.html">Fazer Pedido Online</a>
                         </div>
                     </li>
                 </ul>
